Add hibernate envers

--- a/src/main/resources/application.yml
+++ b/src/main/resources/application.yml
@@ -9,8 +9,8 @@ spring:
     password: root
   jpa:
     show-sql: true
-    hibernate:
-      ddl-auto: none # tell hibernate not to change schema as its managed by liquibase now
+#    hibernate:
+#      ddl-auto: none # tell hibernate not to change schema as its managed by liquibase now
   liquibase:
     enabled: true
     change-log: classpath:db/changelog/db.changelog-master.yaml
