--- a/src/main/resources/db/changelog/db.changelog-master.yaml
+++ b/src/main/resources/db/changelog/db.changelog-master.yaml
@@ -1,3 +1,5 @@
 databaseChangeLog:
   - include:
       file: db/changelog/changelog-1.yaml
+  - include:
+      file: db/changelog/20240722-135643959_changelog.yaml
